<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mOrgAnd</string>

    <!-- File Dialog resources -->
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <!-- End of File Dialog Resources -->

    <string name="title_activity_main">mOrgAnd</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_outline">Outline</string>
    <string name="title_synchronizing_changes">Synchronizing changes</string>

    <string name="action_settings">Settings</string>
    <string name="action_sync">Synchronize</string>
    <string name="save">Save</string>
    <string name="action_set_time">Set time</string>

    <string name="action_downloadwiki">Downloading wiki</string>

    <string name="error_sync">Synchronization failed</string>
    <string name="error_key_file_copy">Error copying key file to internal storage</string>
    <string name="error_key_file_info">Error getting fingerprint from key file</string>
    <string name="error_key_need_pass">This key requires a passphrase</string>
    <string name="action_view">View</string>
    <string name="action_capture">Capture</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete node</string>
    <string name="action_clockin">Clock in</string>
    <string name="action_archive">Archive</string>
    <string name="error_setting_no_calendar">No calendar</string>

</resources>
