<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_capturechild"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/action_capture"
        android:visible="true"/>
    <item
        android:id="@+id/menu_view"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="always"
        android:title="@string/action_view"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/menu_clockin"
        android:icon="@android:drawable/ic_menu_today"
        android:showAsAction="ifRoom"
        android:title="@string/action_clockin"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@android:drawable/ic_menu_today"
        android:showAsAction="ifRoom"
        android:title="@string/action_archive"/>

</menu>
